objects/WT_Request_Type_SLA__mdt.object
<CustomObject>
    <description>This custom metadata is used to store the values for &apos;Request Type&apos; picklist field of the case object as well as to add hours for the report date</description>
    <fields>
        <fullName>Hours__c</fullName>
        <description>This field is used to add hours for the report date</description>
        <label>Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <description>This field is used to know the record type of the case</description>
        <label>Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>This field is used to know the values for the field &apos;Request Type&apos;</description>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Request Type SLA</label>
    <listViews>
        <fullName>Wintrust</fullName>
        <columns>MasterLabel</columns>
        <columns>Record_Type__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Hours__c</columns>
        <filterScope>Everything</filterScope>
        <label>Wintrust</label>
    </listViews>
    <pluralLabel>Request Type SLAs</pluralLabel>
</CustomObject>